# pyutilities

./: .black  .coveragerc  .cspell.json  .gitattributes  .gitignore  .pypirc_example  Pipfile  README.md  _bash_lib.sh  _build.sh  _deploy.sh  _env_python_setup.sh  _env_virtual_setup.sh  _init_local_venv.sh  _init_venv_local.sh  _local_build.sh  _local_full_build.sh  _local_init_venv.sh  _pyproject_.toml  _zzz.sh  build.sh  env_python_setup.sh  env_setup.sh  env_virtual_setup.sh  install_pypi.sh  pyproject.toml  pytest.ini  requirements.txt  safety_requirements_42228.txt  samples.py  setup.cfg  setup.py  test_with_coverage.sh
docs/: GITFLOW. RELEASES.md  README-PUB.md
examples/: using_decorators.py  using_logging.py
jupyter/: using_logging.ipynb
src/pyutilities/: __init__.py  config.py  defaults.py  exception.py  fedit.py  logging.py  pyexception.py  pygit.py  pylog.py  pymaven.py  strings.py  utils.py
src/pyutilities/cli/: __init__.py  echo_server_ipv4.py  fedit.py  md2html.py  pyutils.py  server-ipv4-echo.py
src/pyutilities/commands/: pygit.py  pymaven.py
src/pyutilities/config/: configuration.py
src/pyutilities/io/: fedit.py  io_utilities.py  io_utils.py
src/pyutilities/network/: pyftp.py  pyssh.py
src/pyutilities/sys/: sys_utils.py
src/pyutilities/utils/: common_utils.py  datetime_utils.py  decorators.py  lambdas.py  string_utils.py  strings.py  utilities.py
src/pyutilities/web/: http_client.py  web_client.py
tests/: pyutils_test_constants.py  pyutils_test_helper.py  test_config.py  test_configxls.py  test_fedit.py  test_pygit.py  test_pylog.py  test_pymaven.py  test_strings.py  test_utils.py
tests/cli/: test_fedit.py
tests/commands/: test_pygit.py  test_pymaven.py
tests/config/: test_configuration.py  test_configuration_xls.py
tests/config/test_configs/: xlsx_config.xlsx
tests/configs/: xls_config.xls
tests/io/: test_fedit.py  test_io_utilities.py  test_io_utils.py
tests/sys/: test_sys_utils.py
tests/utils/: test_common_utils.py  test_datetime_utils.py  test_string_utils.py  test_strings.py  test_utilities.py
tests/web/: test_http_client.py  test_web_client.py
