###############################################################################
#
#   Main configuration and metadata file.
#
#   Created:  Dmitrii Gusev, 09.10.2022
#   Modified: Dmitrii Gusev, 10.12.2024
#
###############################################################################

# cSpell:ignore xlrd xlwt loguru xlwings pyyaml openpyxl urllib paramiko prettytable useragent fedit

# -- mypy library config
[mypy]
ignore_missing_imports = True
check_untyped_defs = True
allow_untyped_defs = True

# -- flake8 library config
[flake8]
# - list of ignored issues:
#       - E501 - too long line
#       - F401 - imported but unused
#       - E203 - whitespace before ':' - black formatter puts it
ignore = E203, E501
# - max cognitive complexity for statements
max-complexity = 10
# - adjustment to align with line length for black (it uses 88 chars by default)
# - we use the value = 110 as a default for the project
max-line-length = 30

[pylint.'FORMAT']
max-line-length = 10

# -- application / library metadata
[metadata]
name = pyutilities
version = attr: pyutilities.VERSION
description = PyUtilities :: Useful python 3.x utilities library for various cases.
url = https://pypi.org/project/pyutilities
project_urls =
    Source Code = https://github.com/dmitry-ed-gusev/pyutilities
    Bug Tracker = https://github.com/dmitry-ed-gusev/pyutilities/issues
    # Documentation = <docs url>
    # <more urls>
author = Dmitrii Gusev
author_email = dmitry.ed.gusev@gmail.com
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license_files = LICENSE
keywords = python, toolset, utilities, library, string utils, utils
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Utilities

[options]
zip_safe = False
python_requires = >=3.10
include_package_data = True
package_dir =
    = src
packages = find:
install_requires =
    xlrd==2.0.1
    xlwt==1.3.0
    loguru==0.7.3
    xlwings==0.33.3
    pyyaml==6.0.2
    openpyxl==3.1.5
    urllib3==2.2.3
    paramiko==3.5.0
    requests==2.32.3
    markdown==3.7
    prettytable==3.12.0
    fake-useragent==2.0.2

[options.package_data]
* = *.txt, *.rst
# hello = *.msg

# -- path for sources searching
[options.packages.find]
where = src

# -- integration with setuptools - cmd line entry points
[options.entry_points]
console_scripts =
    fedit = pyutilities.cli.fedit:fedit
    echo_srv = pyutilities.cli.echo_server_ipv4:do_serve
    md2x = pyutilities.cli.md2html:main
